Fixed degree audit ui with gutter wrap (MYPLAN-565) Added disable submission button on messages and comments until required fields are populated (MYPLAN-586)

--- a/myplan-web/src/main/webapp/ks-myplan/css/myplan.css
+++ b/myplan-web/src/main/webapp/ks-myplan/css/myplan.css
@@ -185,6 +185,52 @@ button.myplan-button-transparent:hover {
     background: transparent !important;
     filter: none;
 }
+button.myplan-button-blue[disabled="true"],
+button.myplan-button-blue[disabled="true"]:hover,
+button.myplan-button-blue[disabled="disabled"],
+button.myplan-button-blue[disabled="disabled"]:hover {
+	color: #FFF;
+    text-shadow: 0px 1px 0px #333;
+    border: solid 1px #969696;
+    background: #007DD6;
+    background: -moz-linear-gradient(top, #8BCEFD 0%, #007DD6 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #8BCEFD), color-stop(100%, #007DD6)); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top,  #8BCEFD 0%,#007DD6 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top, #8BCEFD 0%, #007DD6 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top, #8BCEFD 0%, #007DD6 100%); /* IE10+ */
+    background: linear-gradient(top, #8BCEFD 0%, #007DD6 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#8BCEFD', endColorstr='#007DD6', GradientType=0);  /* IE6-9 */
+    opacity: 0.5;
+}
+button.myplan-button-gray[disabled="true"],
+button.myplan-button-gray[disabled="true"]:hover,
+button.myplan-button-gray[disabled="disabled"],
+button.myplan-button-gray[disabled="disabled"]:hover {
+    color: #333;
+    text-shadow: 0px 1px 0px #FFF;
+    border: solid 1px #969696;
+    background: #EBEBEB;
+    background: -moz-linear-gradient(top, #FDFDFD 0%, #EBEBEB 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #FDFDFD), color-stop(100%, #EBEBEB)); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top,  #FDFDFD 0%,#EBEBEB 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top, #FDFDFD 0%, #EBEBEB 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top, #FDFDFD 0%, #EBEBEB 100%); /* IE10+ */
+    background: linear-gradient(top, #FDFDFD 0%, #EBEBEB 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FDFDFD', endColorstr='#EBEBEB', GradientType=0);  /* IE6-9 */
+    opacity: 0.5;
+}
+button.myplan-button-transparent[disabled="true"],
+button.myplan-button-transparent[disabled="true"]:hover,
+button.myplan-button-transparent[disabled="disabled"],
+button.myplan-button-transparent[disabled="disabled"]:hover {
+    color: #1D8FD9;
+    text-shadow: none;
+    border-color: transparent !important;
+    background: transparent !important;
+    filter: none;
+    opacity: 0.5;
+}
+
 .myplan-stacked-list,
 .myplan-stacked-list ul,
 .myplan-stacked-list li,
@@ -700,9 +746,6 @@ table.myplan-course-search-results-datatable .odd:hover .dataTables_empty {
 .myplan-section .uif-header .uif-headerText {
     font-weight: normal;
     text-transform: none;
-}
-.myplan-section .uif-listCollectionGroup ul {
-    min-height: 24px;
 }
 .myplan-section div.blockElement {
     left: 92px !important;
